workspace/second/src/objects/DataQuality__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DataQualitys</relationshipLabel>
        <relationshipName>DataQualitys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Delivery_Date__c</fullName>
        <label>Actual Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Requirement_allocation_date__c</fullName>
        <label>Actual Requirement allocation date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_UAT_Entry_Date__c</fullName>
        <label>Actual UAT Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_UAT_Exit_Date__c</fullName>
        <label>Actual UAT Exit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BaseLine_UAT_End__c</fullName>
        <label>BaseLine UAT End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DataQuality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DataQuality</label>
        <referenceTo>DataQuality__c</referenceTo>
        <relationshipLabel>DataQualitys</relationshipLabel>
        <relationshipName>DataQualitys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Fix_Versions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release Fix Versions</label>
        <referenceTo>DataQuality__c</referenceTo>
        <relationshipLabel>DataQualitys (Release Fix Versions)</relationshipLabel>
        <relationshipName>DataQuality</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>DataQuality</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DataQuality Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DataQualitys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>